copy_ctor move_ctor friend operator_overload

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -54,5 +54,6 @@
         "random": "cpp",
         "string": "cpp",
         "string_view": "cpp"
-    }
+    },
+    "editor.formatOnSave": true
 }
